data/derived/comb/progs/unify/prog5762.ml.out
Characters 180-184:
  let (_, res) = List.fold_left f base args in 
                                  ^^^^
Error: This expression has type unit but an expression was expected of type
         int
